[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-high-speed-microscopy"
version = "0.1.0"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["utils*", "datasets*", "models*", "srcs*"]

[tool.pytest.ini_options]
markers = [
	"smoke: lightweight end-to-end smoke tests",
	"cpu: tests intended to run on CPU",
]
